--- a/fly.toml
+++ b/fly.toml
@@ -1,3 +1,8 @@
+# fly.toml app configuration file generated for vcdoxxer on 2025-12-05T08:35:44-08:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
 app = 'vcdoxxer'
 primary_region = 'sjc'
 
@@ -6,10 +11,12 @@ primary_region = 'sjc'
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = false
+  auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 1
+  min_machines_running = 0
+  processes = ['app']
 
-[env]
-  PORT = "8080"
-
+[[vm]]
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
